refactor variable