@@ -7,11 +7,12 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class PageableUtils {
 
-    private static final List<String> fieldIgnoreCases = List.of(
+    private static final List<String> fieldIgnoreCases = Arrays.asList(
             "name",
             "address",
             "province",
@@ -22,7 +23,7 @@ public class PageableUtils {
 
     public static Pageable getPageable(PageReq req) {
         getPageReq(req);
-        var direction = req.getSortDirection().equals("desc") ? Sort.Direction.DESC : Sort.Direction.DESC;
+        Sort.Direction direction = req.getSortDirection().equals("desc") ? Sort.Direction.DESC : Sort.Direction.DESC;
         Sort.Order order;
         if (fieldIgnoreCases.stream().anyMatch(item -> req.getSortField().equals(item))) {
             order = new Sort.Order(direction, req.getSortField()).ignoreCase();
